<resources>
    <string name="app_name">C196</string>
    <string-array name="course_status">
        <item>Planned To Take</item>
        <item>In-Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
    </string-array>

    <string-array name="assType">
        <item>Pre-Assessment</item>
        <item>Objective Assessment</item>
        <item>Performance Assessment</item>
    </string-array>

    <!-- TODO: Remove  or change this palceholder text -->
    <string name="textview">TextView</string>
    <string name="status_switch">Status</string>
    <string name="course_notification_switch">Notification</string>
    <string name="course_title">Course</string>
    <string name="course_name">Course Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="mentor_phone">Mentor Phone</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="assessmentOA">OA</string>
    <string name="assessmentPA">PA</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="assessment_enddate">Assessment End Date</string>
    <string name="assessment_desc">Assessment Description</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="assessmentsTitle">Assessment</string>
    <string name="add_ass">Add Assessment</string>
    <string name="course_notes">Course Notes</string>
    <string name="delete_course">Delete Course</string>
    <string name="terms_title">Term</string>
    <string name="ternms_name">Term Name</string>
    <string name="edit_ass">Edit Assessment</string>
    <string name="delete_ass">Delete Assessment</string>
    <string name="ass_startdate">Assessment Start Date</string>
    <string name="add_course">Add Course</string>
    <string name="add_term">Add Term</string>
    <string name="status">Status</string>
    <string name="set_notis_On">Set Notifications On</string>
    <string name="shareNotes">Share Notes</string>
    <string name="alert_start">Set Start Date Alert</string>
    <string name="alert_end">Set End Date Alert</string>
    <string name="channel_name">myChannel</string>
    <string name="channel_description">myChannelDescription</string>


</resources>
