<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/submitBtn2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddAssessments">

    <Button
        android:id="@+id/assSubmitButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="622dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="#003057"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentsTxt" />

    <EditText
        android:id="@+id/assDescTF2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assEndTF"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/assDescTXT2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:text="@string/assessment_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assEndTXT2" />

    <TextView
        android:id="@+id/assEndTXT2"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/assessment_enddate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assEndTXT" />

    <TextView
        android:id="@+id/assEndTXT"
        android:layout_width="157dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/ass_startdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assNameTXT2" />

    <EditText
        android:id="@+id/assEndTF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assStartTF"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/assStartTF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assNameTF2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/assNameTF2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusRB"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/assNameTXT2"
        android:layout_width="120dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/assessment_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assTypeTXT3" />

    <RadioGroup
        android:id="@+id/statusRB"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="121dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentsTxt">

        <RadioButton
            android:id="@+id/yesRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessmentOA" />

        <RadioButton
            android:id="@+id/noRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessmentPA" />
    </RadioGroup>

    <TextView
        android:id="@+id/assessmentsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="137dp"
        android:text="@string/assessmentsTitle"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/assTypeTXT3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/assessment_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentsTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>