<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AssessmentsDetailed">

    <View
        android:id="@+id/divider7"
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:layout_marginTop="687dp"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteAssBtn"
        app:layout_constraintStart_toEndOf="@+id/editAssBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editAssBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="410dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#003057"
        android:text="@string/edit_ass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationRB" />

    <Button
        android:id="@+id/deleteAssBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#003057"
        android:text="@string/delete_ass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider7"
        app:layout_constraintTop_toBottomOf="@+id/notificationRB"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/notificationRB"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="150dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detailedAssNotiTxt"
        app:layout_constraintTop_toBottomOf="@+id/assTitleTxt">

        <RadioButton
            android:id="@+id/yesNRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/noNRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

    <TextView
        android:id="@+id/detailedAssNotiTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/course_notification_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedAssDescText" />

    <TextView
        android:id="@+id/assTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="137dp"
        android:text="@string/textview"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailedAssTypeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assTitleTxt" />

    <TextView
        android:id="@+id/detailedAssStartDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedAssTypeTxt" />

    <TextView
        android:id="@+id/detailedAssEndDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedAssStartDateTxt" />

    <TextView
        android:id="@+id/detailedAssDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedAssEndDateTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>